# snake-gm

./: .clang-format  .clangd  CMakeLists.txt  README.md
src/: CMakeLists.txt  Node.cpp  Node.h  common.h  food.cpp  food.h  game.cpp  game.h  grid.cpp  grid.h  main.cpp  snake.cpp  snake.h
